--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         <div class="row">
             <div class="outsourcing-col">
                 <h3>Concept Art</h3>
-                <a img></a>
+                <div class="oursourcing-sliders">
+                    <div class="slider-images">
+                        <a><img src="images/outsourcing_slider_00.png"></a>
+                        <a><img src="images/outsourcing_slider_01.png"></a>
+                        <a><img src="images/outsourcing_slider_02.png"></a>
+                    </div>
+                </div>
                 <p>text</p>
             </div> 
             <div class="outsourcing-col">
