outsourcing sliders update

--- a/index.html
+++ b/index.html
@@ -37,21 +37,38 @@
         <div class="row">
             <div class="outsourcing-col">
                 <h3>Concept Art</h3>
-                <div class="oursourcing-sliders">
+                <div class="outsourcing-sliders">
                     <div class="slider-images">
                         <a><img src="images/outsourcing_slider_00.png"></a>
                         <a><img src="images/outsourcing_slider_01.png"></a>
                         <a><img src="images/outsourcing_slider_02.png"></a>
+                        <a><img src="images/outsourcing_slider_03.png"></a>
                     </div>
                 </div>
                 <p>text</p>
             </div> 
             <div class="outsourcing-col">
                 <h3>Animation</h3>
+                <div class="outsourcing-sliders">
+                    <div class="slider-images">
+                        <a><img src="images/outsourcing_slider_00.png"></a>
+                        <a><img src="images/outsourcing_slider_01.png"></a>
+                        <a><img src="images/outsourcing_slider_02.png"></a>
+                        <a><img src="images/outsourcing_slider_03.png"></a>
+                    </div>
+                </div>
                 <p>text</p>
             </div>
             <div class="outsourcing-col">
                 <h3>UI Art</h3>
+                <div class="outsourcing-sliders">
+                    <div class="slider-images">
+                        <a><img src="images/outsourcing_slider_00.png"></a>
+                        <a><img src="images/outsourcing_slider_01.png"></a>
+                        <a><img src="images/outsourcing_slider_02.png"></a>
+                        <a><img src="images/outsourcing_slider_03.png"></a>
+                    </div>
+                </div>
                 <p>text</p>
             </div>
         </div>
